# duster

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
duster-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
duster-ui/src/: App.svelte
duster-ui/src-tauri/: Cargo.toml  tauri.conf.json
duster-ui/src-tauri/icons/: .gitkeep
duster-ui/src-tauri/src/: lib.rs  main.rs
src/: analyzer.rs  cleaner.rs  cli.rs  config.rs  main.rs  scan_cache.rs  ui.rs
src/scanner/: cache.rs  large_files.rs  mod.rs  temp.rs  trash.rs
