[package]
name = "duster-ui"
version = "0.1.0"
description = "A beautiful UI for duster disk cleanup"
authors = ["you"]
edition = "2021"

[lib]
name = "duster_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"

# Include the duster library
duster = { path = "../.." }
